--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <h1>🏢 Uno Office</h1>
+            <h1>🏢 Uno Office, Feni Sadar</h1>
             <p>Sign in to your account</p>
         </div>
 
