--- a/dashboard.html
+++ b/dashboard.html
@@ -529,6 +529,10 @@
 						<span class="icon">⏳</span>
 						<span>Duty List</span>
 					</a>
+					<a class="button secondary" href="generate/1_apointment_letter_half.html" title="Duty Not assigned List">
+						<span class="icon">⏳</span>
+						<span>খসড়া তালিকা</span>
+					</a>
 					
 				</div>
 			</div>
