--- a/dashboard.html
+++ b/dashboard.html
@@ -586,6 +586,10 @@
 						<span class="icon">⚡</span>
 						<span>Result Entry</span>
 					</a>
+					<a class="button success" href="result/gonovot_3.html" title="Generate Duty List">
+						<span class="icon">⚡</span>
+						<span>Form 3</span>
+					</a>
 					<a class="button success" href="result/form_6.html" title="Generate Duty List">
 						<span class="icon">⚡</span>
 						<span>Form 6</span>
