--- a/dashboard.html
+++ b/dashboard.html
@@ -594,6 +594,10 @@
 						<span class="icon">⚡</span>
 						<span>Form 6</span>
 					</a>
+					<a class="button success" href="result/form_16.html" title="Edit Duty List">
+						<span class="icon">✏️</span>
+						<span>Form 16</span>
+					</a>
 					<a class="button success" href="result/form_18.html" title="Edit Duty List">
 						<span class="icon">✏️</span>
 						<span>Form 18</span>
