--- a/result/form_16.html
+++ b/result/form_16.html
@@ -224,21 +224,25 @@
 			</tbody>
 		</table>
 
-		<!-- Summary Section -->
+		<!-- Summary Section (Split Tables) -->
 		<div style="margin-bottom: 15px; font-size: 11pt;">
+			<table class="data-table" style="width: 100%; margin-bottom: 8px;">
+				<tr>
+					<td style="width: 75%; border-right: none;">(১) প্রতিদ্বন্দ্বী প্রার্থীগণ কর্তৃক প্রাপ্ত ভোটের মোট
+						সংখ্যা (আপত্তিকৃত ভোটসহ):</td>
+					<td style="width: 25%;"></td>
+				</tr>
+			</table>
+			<table class="data-table" style="width: 100%; margin-bottom: 8px;">
+				<tr>
+					<td style="width: 75%; border-right: none;">(২) গণনাকালে বাতিলকৃত (অবৈধ) ভোটের সংখ্যা:</td>
+					<td style="width: 25%;"></td>
+				</tr>
+			</table>
 			<table class="data-table" style="width: 100%;">
 				<tr>
-					<td style="width: 75%; border-bottom: none;">(১) প্রতিদ্বন্দ্বী প্রার্থীগণ কর্তৃক প্রাপ্ত ভোটের মোট
-						সংখ্যা (আপত্তিকৃত ভোটসহ):</td>
-					<td style="width: 25%; border-bottom: none;"></td>
-				</tr>
-				<tr>
-					<td style="border-top: none; border-bottom: none;">(২) গণনাকালে বাতিলকৃত (অবৈধ) ভোটের সংখ্যা:</td>
-					<td style="border-top: none; border-bottom: none;"></td>
-				</tr>
-				<tr>
-					<td style="border-top: none; font-weight: bold;">(৩) মোট : [(১) ও (২) এর সমষ্টি]</td>
-					<td style="border-top: none;"></td>
+					<td style="width: 75%; border-right: none; font-weight: bold;">(৩) মোট : [(১) ও (২) এর সমষ্টি]</td>
+					<td style="width: 25%;"></td>
 				</tr>
 			</table>
 		</div>
