--- a/dashboard.html
+++ b/dashboard.html
@@ -602,9 +602,9 @@
 						<span class="icon">✏️</span>
 						<span>Form 18</span>
 					</a>
-					<a class="button primary" href="#" title="Duty Finding">
+					<a class="button primary" href="result/z_malamal.html" title="Duty Finding">
 						<span class="icon">🔎</span>
-						<span>Combine Result</span>	
+						<span>মালামাল</span>	
 					</a>
 					
 					<a class="button primary" href="result/agent_list.html" title="Duty Finding">
