--- a/result/form_16.html
+++ b/result/form_16.html
@@ -81,6 +81,11 @@
 			margin-bottom: 4px;
 		}
 
+		.info-table {
+			border-collapse: separate;
+			border-spacing: 0 8px;
+		}
+
 		.info-table td {
 			border: none;
 			padding: 2px;
@@ -92,9 +97,10 @@
 		}
 
 		.info-value {
-			border-bottom: 1px dotted #000 !important;
+			border: 1px solid #000 !important;
 			font-weight: bold;
 			font-size: 13pt;
+			padding: 4px 10px !important;
 		}
 
 		.data-table td,
