--- a/dashboard.html
+++ b/dashboard.html
@@ -568,6 +568,10 @@
 						<span class="icon">🗺️</span>
 						<span>Smart Map App</span>
 					</a>
+					<a class="button secondary" href="generate/1_apointment_letter_word.html" title="Vote Centre Location Update">
+						<span class="icon">🗺️</span>
+						<span>Word</span>
+					</a>
 				</div>
 			</div>
 
